--- a/deposit.html
+++ b/deposit.html
@@ -153,7 +153,7 @@
     <a href="dashboard.html" class="nav-item"><i class="fas fa-home"></i><span>হোম</span></a>
     <a href="game.html" class="nav-item"><i class="fas fa-gamepad"></i><span>গেম</span></a>
     <a href="deposit.html" class="nav-item active"><i class="fas fa-wallet"></i><span>ডিপোজিট</span></a>
-    <a href="account.html" class="nav-item"><i class="fas fa-user-circle"></i><span>একাউন্ট</span></a>
+    <a href="history.html" class="nav-item"><i class="fas fa-history"></i><span>হিস্টোরি</span></a>
 </div>
 
 <script>
