--- a/notifications.html
+++ b/notifications.html
@@ -3,21 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Notification Center</title>
+  <title>নোটিফিকেশন সেন্টার</title>
 
-  <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Tiro+Bangla:ital@0;1&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Poppins', 'Tiro Bangla', sans-serif;
       margin: 0;
       background: #f6f7fb;
       color: #222;
+      padding-top: 60px; /* Header space */
     }
-
     /* Header */
     .header {
       background: linear-gradient(135deg, #4f46e5, #06b6d4);
@@ -26,147 +24,119 @@
       align-items: center;
       justify-content: space-between;
       padding: 15px 20px;
-      position: sticky;
+      position: fixed; /* Fixed header */
       top: 0;
-      z-index: 1000;
+      width: 100%;
       box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+      z-index: 1000;
+      box-sizing: border-box;
     }
-
     .header h2 {
-      font-size: 18px;
+      font-size: 1.2rem;
       margin: 0;
-      font-weight: 600;
+      font-weight: 700;
     }
-
-    .header button {
-      background: transparent;
-      border: none;
-      color: white;
-      font-size: 22px;
-      cursor: pointer;
+    /* Container & List */
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 0 15px;
     }
-
-    /* Notification Container */
-    .notification-container {
-      padding: 15px;
+    .empty {
+      text-align: center;
+      color: #6c757d;
+      padding: 40px 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+      margin-top: 20px;
     }
-
+    /* Notification Card Styling */
     .notification-card {
-      background: white;
-      border-radius: 15px;
-      padding: 15px 18px;
-      margin-bottom: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      background: #fff;
+      border-radius: 12px;
+      padding: 15px;
+      margin-bottom: 15px;
       display: flex;
       align-items: flex-start;
-      gap: 15px;
-      transition: all 0.3s ease;
-      border-left: 5px solid #4f46e5;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+      transition: transform 0.2s;
     }
-
     .notification-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 14px rgba(0,0,0,0.1);
+        transform: translateY(-2px);
     }
-
     .notification-icon {
-      background: linear-gradient(135deg, #6366f1, #06b6d4);
-      color: white;
-      font-size: 20px;
-      padding: 10px;
+      background: #e0f7fa;
+      color: #00bcd4;
       border-radius: 50%;
+      width: 40px;
+      height: 40px;
       display: flex;
       align-items: center;
       justify-content: center;
+      font-size: 1.2rem;
+      margin-right: 15px;
       flex-shrink: 0;
-      box-shadow: 0 4px 10px rgba(99,102,241,0.4);
     }
-
-    .notification-content {
-      flex: 1;
-    }
-
     .notification-content h4 {
-      margin: 0;
-      font-size: 16px;
-      font-weight: 600;
+      margin: 0 0 5px 0;
+      font-size: 1.1rem;
       color: #333;
     }
-
     .notification-content p {
-      margin: 5px 0 0;
-      font-size: 14px;
+      margin: 0;
       color: #555;
-      line-height: 1.5;
+      font-size: 0.9rem;
+      line-height: 1.4;
     }
-
     .notification-time {
-      font-size: 12px;
-      color: #888;
-      margin-top: 5px;
+      margin-top: 8px;
+      font-size: 0.75rem;
+      color: #999;
     }
-
-    /* Empty Message */
-    .empty {
-      text-align: center;
-      color: #888;
-      font-size: 14px;
-      margin-top: 40px;
-    }
-
-    @media (max-width: 480px) {
-      .notification-card {
-        padding: 12px 14px;
-      }
-      .notification-content h4 {
-        font-size: 15px;
-      }
-      .notification-content p {
-        font-size: 13px;
-      }
+    .notification-time i {
+        margin-right: 5px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Header -->
   <div class="header">
-    <button onclick="window.location.href='dashboard.html'">
-      <i class="fas fa-arrow-left"></i>
-    </button>
-    <h2><i class="fas fa-bell"></i> Notification Center</h2>
-    <i class=""></i>
+    <h2><i class="fas fa-bell"></i> নোটিফিকেশন</h2>
   </div>
 
-  <!-- Notification Section -->
-  <div class="notification-container" id="notificationList">
-    <p class="empty">🔔 নোটিফিকেশন লোড হচ্ছে...</p>
+  <div class="container">
+    <div id="notificationList">
+      <p class="empty">🔔 নোটিফিকেশন লোড হচ্ছে...</p>
+    </div>
   </div>
 
-  <!-- Firebase SDK -->
   <script type="module">
-    // ✅ Import Firebase modules
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getFirestore, collection, getDocs, orderBy, query } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    // Firebase SDK-এর সর্বশেষ স্থিতিশীল ভার্সন
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+    import { 
+      getFirestore, collection, getDocs, 
+      orderBy, query 
+    } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
 
-    // ✅ তোমার Firebase Config
+    // ✅ আপনার দেওয়া কনফিগারেশন
     const firebaseConfig = {
-  apiKey: "AIzaSyC1nQXKB2gqIUgnecZP8H_BYbhNTvI9InY",
-  authDomain: "head-tell-f7a80.firebaseapp.com",
-  projectId: "head-tell-f7a80",
-  storageBucket: "head-tell-f7a80.firebasestorage.app",
-  messagingSenderId: "972508912669",
-  appId: "1:972508912669:web:2bd505a46be2165d73faf4",
-  measurementId: "G-GZ38LM778D"
-};
+      apiKey: "AIzaSyC1nQXKB2gqIUgnecZP8H_BYbhNTvI9InY",
+      authDomain: "head-tell-f7a80.firebaseapp.com",
+      projectId: "head-tell-f7a80",
+      storageBucket: "head-tell-f7a80.firebasestorage.app",
+      messagingSenderId: "972508912669",
+      appId: "1:972508912669:web:2bd505a46be2165d73faf4",
+      measurementId: "G-GZ38LM778D"
+    };
 
-    // ✅ Initialize Firebase
+    // ইনিশিয়ালাইজেশন
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-
-    // ✅ Notification লোড ফাংশন
+    
+    // ✅ নোটিফিকেশন লোড করার ফাংশন
     async function loadNotifications() {
-      const listContainer = document.getElementById('notificationList');
+      const listContainer = document.getElementById("notificationList");
       listContainer.innerHTML = `<p class="empty">🔔 নোটিফিকেশন লোড হচ্ছে...</p>`;
 
       try {
@@ -181,9 +151,13 @@
         listContainer.innerHTML = "";
         snapshot.forEach(doc => {
           const data = doc.data();
-          const time = new Date(data.timestamp?.toDate()).toLocaleString("bn-BD", {
-            hour: '2-digit', minute: '2-digit', day: '2-digit', month: 'short'
-          });
+
+          // ✅ সংশোধিত কোড: toDate() কল করার আগে data.timestamp নিশ্চিত করা হলো
+          const time = data.timestamp && typeof data.timestamp.toDate === 'function' 
+              ? new Date(data.timestamp.toDate()).toLocaleString("bn-BD", {
+                  hour: '2-digit', minute: '2-digit', day: '2-digit', month: 'short'
+                }) 
+              : "⏳ অপেক্ষমাণ..."; // যদি Timestamp এখনও না আসে
 
           const card = document.createElement("div");
           card.className = "notification-card";
