Update navigation items in game.html

--- a/game.html
+++ b/game.html
@@ -232,9 +232,9 @@ onAuthStateChanged(auth, user=>{
 <div class="toast-message" id="toast"></div>
 
 <div class="bottom-nav">
-    <a href="dashboard.html" class="nav-item active"><i class="fas fa-home"></i> হোম</a>
+    <a href="dashboard.html" class="nav-item"><i class="fas fa-home"></i> হোম</a>
     <a href="deposit.html" class="nav-item"><i class="fas fa-wallet"></i> ডিপোজিট</a>
-    <a href="#" class="nav-item"><i class="fas fa-gamepad"></i> গেইম </a>
+    <a href="#" class="nav-item active"><i class="fas fa-gamepad"></i> গেইম </a>
     <a href="withdraw.html" class="nav-item"><i class="fas fa-arrow-right-arrow-left"></i> উইথড</a>
 </div>
 </body>
