--- a/deposit.html
+++ b/deposit.html
@@ -110,7 +110,7 @@
         <div class="method-selector">
             <div class="method-option" id="bKash-method" data-method="bKash" data-number="01318645435">
                 <div class="method-icon"></div>
-                <span>বিকাশ (Agent)</span>
+                <span>বিকাশ (Personal)</span>
             </div>
             <div class="method-option" id="Nagad-method" data-method="Nagad" data-number="01916196917">
                 <div class="method-icon"></div>
